--- a/TAF.Web/Views/ApplicationForBunkerB/_ApplicationForBunkerBSummaryList.cshtml
+++ b/TAF.Web/Views/ApplicationForBunkerB/_ApplicationForBunkerBSummaryList.cshtml
@@ -78,7 +78,7 @@
                                     <td>{{item.carSpecifications}}</td>
                                     <td>{{item.octaneStoreName}}</td>
                                     <td>{{item.amountFrom}}</td>
-                                    <td>{{item.changeAmount}}</td>
+                                    <td>{{item.changedAmount}}</td>
                                     <td>{{item.auditingAmount}}</td>
                                     <td>{{item.note}}</td>
                                     <td>{{item.driverName}}</td>
