--- a/TAF.Web/Views/ApplicationForBunkerB/_ApplicationForBunkerBIndex.cshtml
+++ b/TAF.Web/Views/ApplicationForBunkerB/_ApplicationForBunkerBIndex.cshtml
@@ -200,7 +200,7 @@
                <div class="row">
                     <div class="col-md-12">
                         <div class="form-group" >
-                            <label class="col-sm-2 control-label no-padding-right">申请金额<span class="red" >*</span></label>
+                            <label class="col-sm-2 control-label no-padding-right">申请加油升数<span class="red" >*</span></label>
                             <div class="col-sm-10">
                                     <input type="number" class="form-control" placeholder="必填" id="amount" name="amount" v-model="item.amount" v-validate:amount="{int:true}"/>
                             </div>
