--- a/TAF.Web/Views/ApplyForVehicleMaintenance/_AudingForVehicleMaintenanceIndex.cshtml
+++ b/TAF.Web/Views/ApplyForVehicleMaintenance/_AudingForVehicleMaintenanceIndex.cshtml
@@ -2,7 +2,7 @@
     <div class="col-xs-12 col-md-12">
         <div class="widget">
             <div class="widget-header bordered-bottom bordered-primary">
-                <span class="widget-caption">车辆送修审核单</span>
+                <span class="widget-caption">车辆送修审批单</span>
             </div>
             <div class="widget-body">
                 <div class="table-toolbar">
