--- a/TAF.Web/Views/Car/_CarInfoIndex.cshtml
+++ b/TAF.Web/Views/Car/_CarInfoIndex.cshtml
@@ -345,6 +345,9 @@
     </div>
 </div>
 <div id="overhaulAmount" class="tab-pane ">
+    <div class="table-toolbar">
+        <a href="javascript:void(0);" class="btn btn-primary " v-on:click="newItem('大修控制额','Car_Overhaul')"><i class="fa  fa-plus"></i> 新增</a>
+    </div>
     <div class="row">
         <div class="col-md-6">
             <table class="table table-striped table-hover table-bordered ">
@@ -354,6 +357,9 @@
                         大修维护控制额(元)
                     </th>
                     <th style="width: 200px;">
+                        年度
+                    </th>
+                    <th style="width: 200px;">
                         操作
                     </th>
                 </tr>
@@ -361,17 +367,21 @@
                 <tbody>
                 <tr v-for="item in list">
                     <td>{{item.value}}</td>
+                    <td>{{item.value2}}</td>
                     <td>
                         <row-command :id="item.id" title="编辑" :name="item.value" showDel="false"></row-command>
                     </td>
                 </tr>
                 </tbody>
-                <tfoot is="table-foot" colspan="2"></tfoot>
+                <tfoot is="table-foot" colspan="3"></tfoot>
             </table>
         </div>
     </div>
 </div>
 <div id="repairAmount" class="tab-pane ">
+    <div class="table-toolbar">
+        <a href="javascript:void(0);" class="btn btn-primary " v-on:click="newItem('中修控制额','Car_Repair')"><i class="fa  fa-plus"></i> 新增</a>
+    </div>
     <div class="row">
         <div class="col-md-6">
             <table class="table table-striped table-hover table-bordered ">
@@ -381,6 +391,9 @@
                         中修维护控制额(元)
                     </th>
                     <th style="width: 200px;">
+                        年度
+                    </th>
+                    <th style="width: 200px;">
                         操作
                     </th>
                 </tr>
@@ -388,17 +401,21 @@
                 <tbody>
                 <tr v-for="item in list">
                     <td>{{item.value}}</td>
+                    <td>{{item.value2}}</td>
                     <td>
                         <row-command :id="item.id" title="编辑" :name="item.value" showDel="false"></row-command>
                     </td>
                 </tr>
                 </tbody>
-                <tfoot is="table-foot" colspan="2"></tfoot>
+                <tfoot is="table-foot" colspan="3"></tfoot>
             </table>
         </div>
     </div>
 </div>
 <div id="minorRepairAmount" class="tab-pane ">
+    <div class="table-toolbar">
+        <a href="javascript:void(0);" class="btn btn-primary " v-on:click="newItem('小修控制额','Car_MinorRepair')"><i class="fa  fa-plus"></i> 新增</a>
+    </div>
     <div class="row">
         <div class="col-md-6">
             <table class="table table-striped table-hover table-bordered ">
@@ -408,6 +425,9 @@
                         小修维护控制额(元)
                     </th>
                     <th style="width: 200px;">
+                        年度
+                    </th>
+                    <th style="width: 200px;">
                         操作
                     </th>
                 </tr>
@@ -415,12 +435,13 @@
                 <tbody>
                 <tr v-for="item in list">
                     <td>{{item.value}}</td>
+                    <td>{{item.value2}}</td>
                     <td>
                         <row-command :id="item.id" title="编辑" :name="item.value" showDel="false"></row-command>
                     </td>
                 </tr>
                 </tbody>
-                <tfoot is="table-foot" colspan="2"></tfoot>
+                <tfoot is="table-foot" colspan="3"></tfoot>
             </table>
         </div>
     </div>
@@ -633,6 +654,20 @@
                                 <div class="col-sm-10">
                                     <span class="input-icon icon-right">
                                         <input type="text" class="form-control " placeholder="必填" name="value" v-model="item.value2" v-validate:value2="{required:true}" />
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div v-if="item.category=='Car_Overhaul'||item.category=='Car_Repair'||item.category=='Car_MinorRepair'">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label no-padding-right">年度<span class="red">*</span></label>
+                                <div class="col-sm-10">
+                                    <span class="input-icon icon-right">
+                                        <input type="number" class="form-control " placeholder="必填" name="value" v-model="item.value2" v-validate:value2="{required:true}" />
                                     </span>
                                 </div>
                             </div>
