完成车辆维修结算单

--- a/TAF.Web/Views/ApplyForVehicleMaintenance/_AudingForVehicleMaintenance2Index.cshtml
+++ b/TAF.Web/Views/ApplyForVehicleMaintenance/_AudingForVehicleMaintenance2Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="row">
     <div class="col-xs-12 col-md-12">
         <div class="well with-header with-footer">
-            <div class="header bordered-palegreen">车辆送修申请单
+            <div class="header bordered-palegreen">车辆送修审批单
             </div>
             <div class="body">
                 <div class="table-toolbar">
