完成发票录入功能

--- a/TAF.Web/Views/VoucherAudit/_VoucherAuditIndex.cshtml
+++ b/TAF.Web/Views/VoucherAudit/_VoucherAuditIndex.cshtml
@@ -264,7 +264,7 @@
 
                                         <td>
                                             <button type="button" class="btn   edit" v-on:click="showModifyDialog('编辑凭证审核归纳表',item.id)"><i class="fa fa-edit"></i> 编辑</button>
-                                            <button type="button" class="btn btn-danger  " v-on:click="showDeleteDialog(item.id,item.name) "><i class="fa fa-trash-o"></i> 删除</button>
+                                            <button type="button" class="btn btn-danger  " v-on:click="showDeleteDialog(item.id,item.code) "><i class="fa fa-trash-o"></i> 删除</button>
                                         </td>
                                     </tr>
                                 </tbody>
