--- a/TAF.Web/Views/Purchase/_PurchaseInfoIndex.cshtml
+++ b/TAF.Web/Views/Purchase/_PurchaseInfoIndex.cshtml
@@ -59,6 +59,11 @@
                                         质量评价体系评分
                                     </a>
                                 </li>
+                                <li class=" ">
+                                    <a data-toggle="tab" href="#year" aria-expanded="true" id="pyear">
+                                        会计年度
+                                    </a>
+                                </li>
                             </ul>
                             <div class="tab-content">
                                 <div id="unit" class="tab-pane active">
@@ -455,6 +460,40 @@
                                             </tr>
                                             </tbody>
                                             <tfoot is="table-foot" colspan="4"></tfoot>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="year" class="tab-pane ">
+                                <div class="table-toolbar">
+                                    <a href="javascript:void(0);" class="btn btn-primary " v-on:click="newItem('会计年度','Car_Year')"><i class="fa  fa-plus"></i> 新增</a>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <table class="table table-striped table-hover table-bordered ">
+                                            <thead>
+                                            <tr role="row">
+                                                <th style="width: 200px;">
+                                                    年度
+                                                </th>
+                                                <th style="width: 200px;">
+                                                    是否当前年度
+                                                </th>
+                                                <th style="width: 200px;">
+                                                    操作
+                                                </th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                            <tr v-for="item in list">
+                                                <td>{{item.value}}</td>
+                                                <td>{{item.value4=="True"?"是":""}}</td>
+                                                <td>
+                                                    <row-command :id="item.id" title="编辑" :name="item.value"></row-command>
+                                                </td>
+                                            </tr>
+                                            </tbody>
+                                            <tfoot is="table-foot" colspan="3"></tfoot>
                                         </table>
                                     </div>
                                 </div>
