--- a/TAF.Web/Views/ProcurementPlan/_ProcurementPlanIndex.cshtml
+++ b/TAF.Web/Views/ProcurementPlan/_ProcurementPlanIndex.cshtml
@@ -39,7 +39,7 @@
                                     <th style="width: 200px;">
                                         责任人
                                     </th>        
-                                    <th style="width: 200px;">
+                                    <th style="width: 300px;">
                                         操作
                                     </th>
                                 </tr>
@@ -132,6 +132,7 @@
                                     <td>{{item.user}}</td>
                                     <td>
                                     <button type="button" class="btn   edit" v-on:click="showModifyDialog('编辑采购计划',item.id)"><i class="fa fa-edit"></i> 编辑</button>
+                                        <button type="button" class="btn   edit" v-on:click="showLinkDialog('关联支出预算',item.id,item.year)"><i class="fa  fa-link"></i> 关联</button>
                                     <button type="button" class="btn btn-danger  " v-on:click="showDeleteDialog(item.id,item.name) " ><i class="fa fa-trash-o"></i> 删除</button>
                                     </td>
                                 </tr>
@@ -334,6 +335,149 @@
                 <button type="button" class="btn btn-default" data-dismiss="modal"><i class='fa   fa-mail-reply'></i>取消</button>
                 <button type="submit" class="btn btn-primary" v-on:click="saveNew()" v-show="!modifyEntity.editModel"  disabled="{{!$v.valid}}" ><i class='fa    fa-floppy-o'></i>保存新增 </button>
                 <button type="submit" class="btn btn-primary" v-on:click="save()"  disabled="{{!$v.valid}}" ><i class='fa    fa-floppy-o'></i>保存关闭</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- 编辑对话框 -->
+<div class="bootbox modal fade modal-primary in" id="linkOutlaysDialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 class="modal-title">{{ modifyEntity.modifyTitle }}</h4>
+                <div v-model="title"></div>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-md-12">
+                        <table class="table table-striped table-hover table-bordered ">
+                            <thead>
+                            <tr role="row">
+
+                                <th style="width: 200px;">
+                                    品名
+                                </th>
+                                <th style="width: 200px;">
+                                    计量单位
+                                </th>
+                                <th style="width: 100px;">
+                                    数量
+                                </th>
+                                <th style="width: 100px;">
+                                    单价
+                                </th>
+                                <th style="width: 100px;">
+                                    金额
+                                </th>
+                                <th style="width: 300px;">
+                                    操作
+                                </th>
+                            </tr>
+                            <tr role="row">
+                                <th>
+                                    <input type="text" class="form-control" placeholder="品名" v-model="queryEntity2.name" />
+                                </th>
+                                <th>
+                                </th>
+                                <th>
+                                </th>
+                                <th>
+                                </th>
+                                <th>
+                                </th>
+                                <th>
+                                    <button type="button" class="btn edit" v-on:click="query2(0,queryEntity2.name)"><i class="fa fa-search"></i> 搜索</button>
+                                    <button type="button" class="btn edit" v-on:click="resetSearch2()"><i class="fa fa-times"></i> 重置</button>
+                                </th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr v-for="o in list2.items">
+                                <td>{{o.name}}</td>
+                                <td>{{o.unit}}</td>
+                                <td>{{o.amount}}</td>
+                                <td>{{o.price}}</td>
+                                <td>{{o.total}}</td>
+                                <td>
+                                    <button type="button" class="btn   edit" v-on:click="link(o.id)"><i class="fa  fa-link"></i> 关联</button>
+                                </td>
+                            </tr>
+                            </tbody>
+                            <tfoot>
+                            <tr>
+                                <td colspan="6" class="DTTTFooter ">
+                                    <div class="col-sm-4">
+                                        <div class="dataTables_info" id="simpledatatable_info" role="status" aria-live="polite"> {{list2.from}} - {{list2.to}} / {{list2.total}} </div>
+                                    </div>
+                                    <div class="dataTables_paginate paging_bootstrap">
+                                        <ul id="container" class="pagination"></ul>
+                                    </div>
+                                </td>
+                            </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <table class="table table-striped table-hover table-bordered ">
+                            <thead>
+                                <tr role="row">
+
+                                    <th style="width: 200px;">
+                                        品名
+                                    </th>
+                                    <th style="width: 200px;">
+                                        计量单位
+                                    </th>
+                                    <th style="width: 100px;">
+                                        数量
+                                    </th>
+                                    <th style="width: 100px;">
+                                        单价
+                                    </th>
+                                    <th style="width: 100px;">
+                                        金额
+                                    </th>
+                                    <th style="width: 300px;">
+                                        操作
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr v-for="o in list3.items">
+                                    <td>{{o.name}}</td>
+                                    <td>{{o.unit}}</td>
+                                    <td>{{o.amount}}</td>
+                                    <td>{{o.price}}</td>
+                                    <td>{{o.total}}</td>
+                                    <td>
+                                        <button type="button" class="btn   edit" v-on:click="remove(o.id)"><i class="fa   fa-unlink"></i> 移除关联</button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <td colspan="6" class="DTTTFooter ">
+                                        <div class="col-sm-4">
+                                            <div class="dataTables_info" id="simpledatatable_info" role="status" aria-live="polite"> {{list3.from}} - {{list3.to}} / {{list3.total}} </div>
+                                        </div>
+                                        <div class="col-sm-8 ">
+                                            <div class="dataTables_paginate paging_bootstrap">
+                                                <ul id="container3" class="pagination"></ul>
+                                            </div>
+                    
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal"><i class='fa   fa-mail-reply'></i>关闭</button>
             </div>
         </div>
     </div>
