检查到调整后增加收入功能

--- a/TAF.Web/Views/Account/_UserIndex.cshtml
+++ b/TAF.Web/Views/Account/_UserIndex.cshtml
@@ -130,4 +130,4 @@
         </validator>
     </div>
 </template>
-<script src="~/Scripts/Account/user.js"></script>
+<script src="~/Views/Account/user.js"></script>
