--- a/TAF.Web/Views/BudgetReceipt/_BudgetReceiptIndex.cshtml
+++ b/TAF.Web/Views/BudgetReceipt/_BudgetReceiptIndex.cshtml
@@ -159,7 +159,7 @@
 </div>
 <form-body></form-body>
 <template id="budgetReceiptFormBody">
-    <div class="bootbox modal fade modal-primary in" id="addItemModal">
+    <div class="bootbox modal fade modal-primary in" id="showBudgetDetails1">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -635,7 +635,7 @@
     </div>
 </template>
 <script src="~/assets/js/liteuploader.js"></script>
-<script src="~/Scripts/budgetReceipt.js"></script>
+<script src="~/Views/BudgetReceipt/budgetReceipt.js"></script>
 
 
 
