--- a/TAF.Web/Views/BudgetReceipt/_ReceiptIndex.cshtml
+++ b/TAF.Web/Views/BudgetReceipt/_ReceiptIndex.cshtml
@@ -206,7 +206,7 @@
         </validator>
     </div>
 </template>
-<script src="~/Scripts/receipt.js"></script>
+<script src="~/Views/BudgetReceipt/receipt.js"></script>
 
 
 
