--- a/TAF.Web/Views/BudgetReceipt/_BudgetReceiptIndex2.cshtml
+++ b/TAF.Web/Views/BudgetReceipt/_BudgetReceiptIndex2.cshtml
@@ -158,8 +158,8 @@
     </div>
 </div>
 <form-body></form-body>
-<template id="budgetReceiptFormBody">
-<div class="bootbox modal fade modal-primary in" id="addItemModal">
+<template id="budgetReceiptFormBody2">
+<div class="bootbox modal fade modal-primary in" id="showBudgetDetails2">
 <div class="modal-dialog">
 <div class="modal-content">
 <div class="modal-header">
@@ -635,7 +635,7 @@
 </div>
 </template>
 <script src="~/assets/js/liteuploader.js"></script>
-<script src="~/Scripts/budgetReceipt2.js"></script>
+<script src="~/Views/BudgetReceipt/budgetReceipt2.js"></script>
 
 
 
