--- a/TAF.Web/Views/BudgetOutlay/_BudgetSummary.cshtml
+++ b/TAF.Web/Views/BudgetOutlay/_BudgetSummary.cshtml
@@ -17,7 +17,7 @@
                                     <th style="width: 100px;" rowspan="3">
                                         科目名称
                                     </th>
-                                    <th style="width: 600px;" colspan="6">
+                                    <th style="width: 600px;" colspan="7">
                                         收入(万元)
                                     </th>
                                     <th style="width: 500px;" colspan="5">
@@ -39,6 +39,9 @@
                                     </th>
                                     <th style="width: 100px;" rowspan="2">
                                         上年结转
+                                    </th>
+                                    <th style="width: 100px;" rowspan="2">
+                                        预算外收入
                                     </th>
                                     <th style="width: 100px;" rowspan="2">
                                         合计
@@ -80,6 +83,7 @@
                                     <td>{{item.column2}}</td>
                                     <td>{{item.column3}}</td>
                                     <td>{{item.column4}}</td>
+                                    <td>{{item.column5}}</td>
                                     <td>{{item.total3}}</td>
                                     <td>{{item.total4}}</td>
                                     <td>{{item.column5}}</td>
