--- a/TAF.Web/Views/ActualOutlay/_ActualOutlayIndex.cshtml
+++ b/TAF.Web/Views/ActualOutlay/_ActualOutlayIndex.cshtml
@@ -13,11 +13,12 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-xs-5 col-md-5">
+    <div class="col-xs-7 col-md-7">
         <div class="widget">
             <div class="widget-header bordered-bottom bordered-danger">
-                <span class="widget-caption">年初预算支出表</span>
+                <span class="widget-caption">年度预算支出表</span>
             </div>
+           
             <div class="widget-body">
                 <div class="table-toolbar">
                 </div>
@@ -26,42 +27,52 @@
                         <table class="table table-striped table-hover table-bordered ">
                             <thead>
                                 <tr role="row">
-                                    <th style="width: 60px;" rowspan="3">
-                                        操作
+                                    <th style="width: 120px;" rowspan="3">
+                                        选择
                                     </th>
-                                    <th style="width: 200px;" rowspan="3">
+                                    <th style="width: 150px;" rowspan="3">
                                         项目名称(品名)
                                     </th>
-                                    <th style="width: 200px;" rowspan="3">
+                                    <th style="width: 90px;" rowspan="3">
                                         数量
                                     </th>
-                                    <th style="width: 200px;" rowspan="3">
+                                    <th style="width: 100px;" rowspan="3">
                                         计量单位
                                     </th>
-                                    <th style="width: 200px;" rowspan="3">
+                                    <th style="width: 100px;" rowspan="3">
                                         单价或经费标准或支出限额
                                     </th>
-                                    <th style="width: 200px;" rowspan="3">
+                                    <th style="width: 100px;" rowspan="3">
                                         合计(万元)
                                     </th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr v-for="item2 in list2">
-                                    <td>
-                                        <div class="checkbox">
-                                            <label for="selectItem_{{item2.id}}">
-                                                <input type="radio" v-model="selectItem" value="{{item2.id}}" name="selectItem" id="selectItem_{{item2.id}}">
-                                                <span class=" text"></span>
-                                            </label>
-                                        </div>
-                                    </td>
-                                    <td>{{item2.name}}</td>
-                                    <td>{{item2.amount}}</td>
-                                    <td>{{item2.unit}}</td>
-                                    <td>{{item2.price}}</td>
-                                    <td>{{item2.total}}</td>
+                                <tr role="row">
+                                    <th><search-command></search-command></th>
+                                    <th>
+                                        <input type="text" class="form-control" placeholder="名称" v-model="queryEntity.name" />
+                                    </th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
                                 </tr>
+                            <tr v-for="item2 in list2">
+                                <td>
+                                    <div class="checkbox">
+                                        <label for="selectItem_{{item2.id}}">
+                                            <input type="radio" v-model="selectItem" value="{{item2.id}}" name="selectItem" id="selectItem_{{item2.id}}">
+                                            <span class=" text"></span>
+                                        </label>
+                                    </div>
+                                </td>
+                                <td>{{item2.name}}</td>
+                                <td>{{item2.amount}}</td>
+                                <td>{{item2.unit}}</td>
+                                <td>{{item2.price}}</td>
+                                <td>{{item2.total}}</td>
+                            </tr>
                             </tbody>
                         </table>
                     </div>
@@ -69,7 +80,7 @@
             </div>
         </div>
     </div>
-    <div class="col-xs-7 col-md-7">
+    <div class="col-xs-5 col-md-5">
         <div class="widget">
             <div class="widget-header bordered-bottom bordered-primary">
                 <span class="widget-caption">年度实际支出表</span>
