完成实际支出页面逻辑处理

--- a/TAF.Web/Views/ActualOutlay/_ActualOutlayIndex.cshtml
+++ b/TAF.Web/Views/ActualOutlay/_ActualOutlayIndex.cshtml
@@ -71,7 +71,7 @@
                                 <td>{{item2.amount}}</td>
                                 <td>{{item2.unit}}</td>
                                 <td>{{item2.price}}</td>
-                                <td>{{item2.total}}</td>
+                                <td>{{item2.unUsed}}</td>
                             </tr>
                             </tbody>
                         </table>
