完成预算收入与实际收入统计页面

--- a/TAF.Web/Views/ActualOutlay/_OutlayIndex.cshtml
+++ b/TAF.Web/Views/ActualOutlay/_OutlayIndex.cshtml
@@ -35,7 +35,7 @@
                                     实际支出
                                 </th>                                    
                                 <th style="width: 200px;" rowspan="3">
-                                    预算结余
+                                    预算结余(万元)
                                 </th>
                                 <th style="width: 60px;" rowspan="3">
                                     操作
@@ -112,7 +112,7 @@
                                     时间
                                 </th>
                                 <th style="width: 200px;">
-                                    金额
+                                    金额(元)
                                 </th>
                                 <th style="width: 400px;">
                                     摘要
@@ -137,7 +137,7 @@
     </div>
 </template>
 <script src="~/assets/js/liteuploader.js"></script>
-<script src="~/Scripts/Views/ActualOutlay/outlay.js"></script>
+<script src="~/Views/ActualOutlay/outlay.js"></script>
 
 
 
