--- a/TAF.Web/Views/BudgetReceipt/_ReceiptIndex.cshtml
+++ b/TAF.Web/Views/BudgetReceipt/_ReceiptIndex.cshtml
@@ -196,7 +196,7 @@
                             <label class="col-sm-2 control-label no-padding-right">实际预算外收入<span class="red" >*</span></label>
                             <div class="col-sm-10">
                                 <span class="input-icon icon-right">
-                                    <input type="text" class="form-control  " placeholder="必填" id="amount" name="amount" v-model="item.amount" v-validate:required="{int:true}"/>
+                                    <input type="text" class="form-control  " placeholder="必填" id="amount" name="amount" v-model="item.amount" v-validate:required="{float:true}"/>
                                 </span>
                             </div>
                         </div>
