--- a/TAF.Web/Views/BudgetOutlay/_BudgetPerformance.cshtml
+++ b/TAF.Web/Views/BudgetOutlay/_BudgetPerformance.cshtml
@@ -2,7 +2,7 @@
     <div class="col-xs-12 col-md-12">
         <div class="widget">
             <div class="widget-header bordered-bottom bordered-primary">
-                <span class="widget-caption">预算</span>
+                <span class="widget-caption">预算执行情况</span>
             </div>
             <div class="widget-body">
                 <div class="table-toolbar">
@@ -155,7 +155,7 @@
                                     <td>{{item.total17}}</td>
                                     <td>{{item.total18}}</td>
                                     <td>{{item.total19}}</td>
-                                    <td><div v-if="item.total20>0">{{item.total20}}%</div><div v-else><span class="red">{{item.total20}}</span></div></td>
+                                    <td><div v-if="item.total20>0">{{item.total20}}</div><div v-else><span class="red">{{item.total20}}</span></div></td>
                                     <td><div v-if="item.total21>0">{{item.total21}}%</div><div v-else><span class="red">{{item.total21}}%</span></div></td>
                                     <td>{{item.total22}}</td>
                                     <td>{{item.total23}}</td>
@@ -211,7 +211,7 @@
                             <label class="col-sm-2 control-label no-padding-right">实际科目结余<span class="red" >*</span></label>
                             <div class="col-sm-10">
                                 <span class="input-icon icon-right">
-                                    <input type="number" class="form-control  " placeholder="必填" id="total1" name="total1" v-model="item.total1" v-validate:total1="{required:true}"/>
+                                    <input type="number" class="form-control  " placeholder="必填" id="total1" name="total1" v-model="item.total1" v-validate:total1="{required:true,float:true}"/>
                                 </span>
                             </div>
                         </div>
@@ -223,7 +223,7 @@
                             <label class="col-sm-2 control-label no-padding-right">家底<span class="red" >*</span></label>
                             <div class="col-sm-10">
                                 <span class="input-icon icon-right">
-                                    <input type="number" class="form-control  " placeholder="必填" id="total2" name="total2" v-model="item.total2" v-validate:total2="{required:true}"/>
+                                    <input type="number" class="form-control  " placeholder="必填" id="total2" name="total2" v-model="item.total2" v-validate:total2="{required:true,float:true}"/>
                                 </span>
                             </div>
                         </div>
@@ -235,7 +235,7 @@
                             <label class="col-sm-2 control-label no-padding-right">下年<span class="red" >*</span></label>
                             <div class="col-sm-10">
                                 <span class="input-icon icon-right">
-                                    <input type="number" class="form-control  " placeholder="必填" id="total3" name="total3" v-model="item.total3" v-validate:total3="{required:true}"/>
+                                    <input type="number" class="form-control  " placeholder="必填" id="total3" name="total3" v-model="item.total3" v-validate:total3="{required:true,float:true}"/>
                                 </span>
                             </div>
                         </div>
