--- a/TAF.Web/Views/BudgetReceipt/_ReceiptIndex.cshtml
+++ b/TAF.Web/Views/BudgetReceipt/_ReceiptIndex.cshtml
@@ -2,7 +2,7 @@
     <div class="col-xs-12 col-md-12">
         <div class="widget">
             <div class="widget-header bordered-bottom bordered-primary">
-                <span class="widget-caption">预算</span>
+                <span class="widget-caption">预算收入统计</span>
             </div>
             <div class="widget-body">
                 <div class="table-toolbar">
