--- a/TAF.Web/Views/BudgetOutlay/_BudgetPerformance.cshtml
+++ b/TAF.Web/Views/BudgetOutlay/_BudgetPerformance.cshtml
@@ -6,6 +6,11 @@
             </div>
             <div class="widget-body">
                 <div class="table-toolbar">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="/BudgetOutlay/Download" target="_self"><i class='fa    fa-arrow-circle-down'></i>导出报告 </a>
+                        </div>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
